<resources>
    <string name="diurnalEffects">SleepBetter</string>
    <string name="nocturnalEffects">SleepBetter</string>
    <string name="app_name">SleepBetter</string>
    <string name="introductionTitle">WELCOME</string>
    <string name="welcomeTitle">Welcome to.... Here....</string>
    <string name="startButton">START</string>
    <string name="permission">Consent Form</string>
    <string name="yourName">Your name...</string>
    <string name="participantName">Participant ID...</string>
    <string name="linkBitmoji">Linked Bitmoji</string>
    <string name="consentPageTitle">CONSENT FORM</string>
    <string name="consentIntro">In order to proceed with the experiment, we will kindly ask you to look over the next paragraphs to understand your involvement into this study. Please initial the box(es) if you agree with the statement(s):
</string>
    <string name="permissionOne">I have read and understood the information sheet (26/11/2018 /Version 2.0) and have had the opportunity to ask questions about the study.</string>
    <string name="permissionTwo">I agree to take part in this research project and agree for my data to be used for the purpose of this study.</string>
    <string name="permissionThree">I understand my participation is voluntary and I may withdraw at any time for any reason without my rights being affected.</string>
    <string name="permissionFour">I understand my responses will be anonymised in reports of the research.</string>
    <string name="permissionFive">I understand that I may be quoted directly in reports of the research but that my name will not be used.</string>
    <string name="permissionSix">I understand that the information collected about me may be anonymised and used in future ethically approved research studies.</string>
    <string name="permissionSeven">I understand that information collected about me during my participation in this study will be stored on a password protected computer and that this information will only be used for the purpose of ethically approved research studies.</string>
    <string name="permissionEight">Would you agree on being contacted after the study in regards to possible outcomes/ in order to provide insights from your experience of participating in this experiment?</string>
    <string name="noticeTitle">NOTICE</string>
    <string name="notice">The next set of questions you will receive aim to assess your sleeping experience before using the SleepBetter app, in order to be able to record your progress. There are 9 questions which should approximately take 1 or 2 minutes max.</string>
    <string name="op1">0-15 min</string>
    <string name="op1.1">I don\'t wake up too early/Up to 15 min</string>
    <string name="op2">16-30 min</string>
    <string name="op3">31-45 min</string>
    <string name="op4">46-60 min</string>
    <string name="op5">>60 min</string>
    <string name="op1.2">0-1</string>
    <string name="op2.2">2</string>
    <string name="op3.2">3</string>
    <string name="op4.2">4</string>
    <string name="op5.2">5/more</string>
    <string name="op1.3">Very good</string>
    <string name="op2.3">Good</string>
    <string name="op3.3">Average</string>
    <string name="op4.3">Poor</string>
    <string name="op5.3">Very poor</string>
    <string name="op1.4">Not at all</string>
    <string name="op2.4">A little</string>
    <string name="op3.4">Somewhat</string>
    <string name="op4.4">Much</string>
    <string name="op5.4">Very much</string>
    <string name="op1.5">I don\'t have a problem/less than 1 month</string>
    <string name="op2.5">1-2 months</string>
    <string name="op3.5">3-6 months</string>
    <string name="op4.5">7-12 months</string>
    <string name="op5.5">>1 year</string>
    <string name="op1.6">A lot worse</string>
    <string name="op2.6">Worse</string>
    <string name="op3.6">The same</string>
    <string name="op4.6">Better</string>
    <string name="op5.6">A lot better</string>
    <string name="questionnaireTitle">QUESTIONNAIRE</string>
    <string name="q1desc">This first set of questions refer to a general routine in your daily life. Please choose the most appropriate answer.</string>
    <string name="s1">How long does it usually take you to fall asleep?</string>
    <string name="s2">Usually if you wake up one or more times during the night, how long are you awake in total?</string>
    <string name="s3">If your final wake-up time occurs before you intend to wake up, how much earlier is this?</string>
    <string name="q2desc">This set of questions refer to your sleep quality in general. Please choose the most appropriate answer.</string>
    <string name="s4">How many nights a week do you have a problem with your sleep?</string>
    <string name="s5">How would you rate your sleep quality?</string>
    <string name="q3desc">This set of questions refer to the impact your sleeping pattern usually has on your daily activities and your life in general. Please choose the most appropriate answer.</string>
    <string name="s6">How do you think sleep negatively impacted your mood, energy, or relationships?</string>
    <string name="s7">How do you think sleep negatively impacted your concentration, productivity, or ability to stay awake?</string>
    <string name="s8">How do you think sleep negatively impacted your life in general?</string>
    <string name="q4desc">This set of questions aim to asses the severity of your sleep problems (if any). Please choose the most appropriate answer.</string>
    <string name="s9">How long have you had a problem with your sleep?</string>
    <string name="s1.1">How long did it take you to fall asleep last night?</string>
    <string name="s2.1">If you woke up one or more times during last night, how long are you awake in total?</string>
    <string name="s3.1">If your final wake-up time occurred before you intended to wake up, how much earlier was this?</string>
    <string name="s5.1">How would you rate the quality of last night\'s sleep?</string>
    <string name="s6.1">How do you think last night\'s sleep impacted your mood, energy, or relationships?</string>
    <string name="s7.1">How do you think last night\'s sleep impacted your concentration, productivity, or ability to stay awake?</string>
    <string name="s8.1">How do you think last night\'s sleep impacted your life in general?</string>
    <string name="questionnaireHelp">First, how would you rate the following aspects of your sleep and daily experience? 1 represents the lowest and 5 the highest.</string>
    <string name="questionnaireHelpSecond">For the question \"How quickly do you usually fall asleep?\", please bare in mind that 1 means \"as soon as getting into bed\", 2 is \"within 20 minutes\", 3 is \"up to one hour\", 4 is \"1/1.30 hours\" and 5 is \"more than that\". Also, for the \"How easily do you usually wake up?\", notice that 1 means \"waking up with no alarm\", 2 is \"using the alarm only sometimes\", 3 is \"using the alarm but I get up easily\", 4 is \"using the snooze button once\", 5 is \"using the snooze button more than once\".</string>
    <string name="questionnaireUsuallyHelpSecond">For the question \"How easily did you fall asleep last night?\", please bare in mind that 1 means \"as soon as got into bed\", 2 is \"within 20 minutes\", 3 is \"up to one hour\", 4 is \"1/1.30 hours\" and 5 is \"more than that\". Also, for the \"How easily did you wake up this morning?\", notice that 1 means \"woke up with no alarm\", 2 is \"used the alarm\", 3 is \"used the alarm and hit snooze\", 4 is \"used the snooze button more than once\", 5 is \"could not wake up even wih alarm\".</string>
    <string name="nocturnalTitle">Night-time</string>
    <string name="timesWakingUp">How many times do you wake up per night in average?</string>
    <string name="nightTerrorUsually">Do you ever have night terrors? If yes, how many times a week?</string>
    <string name="beforeAfter">Before and after</string>
    <string name="fallAsleepUsually">How quickly do you usually fall asleep?</string>
    <string name="wakeUpUsually">How easily do you usually wake up?</string>
    <string name="freshUsually">How fresh do you usually feel after you wake up?</string>
    <string name="mood">Mood</string>
    <string name="happyUsually">How happy do you usually feel during the day?</string>
    <string name="sadUsually">How sad do you usually feel during the day?</string>
    <string name="sleepyUsually">How sleepy do you usually feel during the day?</string>
    <string name="tiredUsually">How tired do you usually feel during the day?</string>
    <string name="stressUsually">How stressed do you usually feel during the day?</string>
    <string name="some_explanation_about_the_input">description</string>
    <string name="desc">Description</string>
    <string name="name">Your Name...</string>
    <string name="participant">Participant ID...</string>
    <string name="factorsIntroduction">
        These are the next factors and associated experiments that impact your sleep hygiene. The chosen experiment is the one you chose to follow.
        <font fgcolor="red"><b>Please bare in mind that after clicking Submit you will only be able to change the experiment after 5 days.</b></font>
        </string>
    <string name="lightTitle">LIGHT</string>
    <string name="firstLight">Increase bright light exposure during the day</string>
    <string name="secondLight">Wear glasses that block blue light during the night.</string>
    <string name="thirdLight">Turn off any bright lights 2 hours before going to bed (such as TV/the computer etc).</string>
    <string name="caffeineTitle">CAFFEINE</string>
    <string name="firstCaffeine">Do not drink caffeine within 6 hours before sleep</string>
    <string name="secondCaffeine">Limit yourself to 4 cups of coffees per day; 10 cans of coke/fanta; 2 energy drinks</string>
    <string name="thirdCaffeine">Do not drink caffeine on empty stomach</string>
    <string name="scheduleTitle">SLEEP SCHEDULE</string>
    <string name="firstSchedule">Usually get up at the same time everyday, even on weekends/vacations</string>
    <string name="secondSchedule">Sleep no less than 7 hours per night</string>
    <string name="thirdSchedule">Do not go to bed unless you are tired. If you are not, relax with a bath/by reading a book before bed</string>
    <string name="fourthSchedule">Go to sleep at 22:30 PM the latest</string>
    <string name="WhatIsChatbot">You can ask Alex questions about sleep hygiene and other cool, interesting facts about sleep. For fun, you can also ask your companion to tell you a joke. just give it a try and have some fun!</string>
    <string name="sleepHygienetitle">Sleep Hygiene?</string>
    <string name="appIntro">Welcome! Sleep Better is a mobile application that guides you through a series of experiments that you can run in a definite period of time in order to start a tuning process over your sleeping patterns.
You will be able to change/choose your experiment once every 5 days, where (if you\'re in group A) at the end of each day you will have to log on your experience and analyse the data and interact with the other features of the app.
To begin with, complete the consent form, input your name (that only YOU will be able to see), and your given participant number.
</string>
    <string name="ourMissionTitle">Our mission?</string>
    <string name="howItWorks"> You can ask for more information on the following topics: Blue Screen, Caffeine, Circadian Rhythms, Energy drinks, etc! Simply ask your companion: \"Tell me about...\" and complete the question with one of the topics. You can also ask your companion for random facts about sleep: \"Tell me a fact\"! And do not forget to start with a Hi!</string>
    <string name="chatbotGuide">CHATBOT GUIDE</string>
    <string name="submitUpdate">SUBMIT</string>
    <string name="backButton">BACK</string>
</resources>