<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:clickable="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/factorsIntro"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:maxLines="30"
            android:text="@string/factorsIntroduction"
            android:textColor="@android:color/black"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/ScrollViewQuestionnaire"
            style="@android:style/Widget.Material.ScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fillViewport="true"
            android:scrollbarStyle="insideOverlay"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/factorsIntro"
            app:layout_constraintVertical_bias="1.0"
            tools:targetApi="lollipop">

            <FrameLayout
                android:id="@+id/FrameForScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ScrollViewQuestionnaire"
                app:layout_constraintStart_toStartOf="@+id/ScrollViewQuestionnaire"
                app:layout_constraintTop_toTopOf="@+id/ScrollViewQuestionnaire">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="40dp"
                    tools:layout_editor_absoluteY="0dp">


                    <RadioGroup
                        android:id="@+id/experimentsGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <EditText
                            android:id="@+id/light"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:ems="10"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/some_explanation_about_the_input"
                            android:inputType="textPersonName"
                            android:text="@string/lightTitle"
                            tools:layout_editor_absoluteX="0dp"
                            tools:layout_editor_absoluteY="3dp" />

                        <RadioButton
                            android:id="@+id/firstLight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/firstLight"
                            android:textSize="12sp" />

                        <RadioButton
                            android:id="@+id/secondLight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/secondLight"
                            android:textSize="12sp" />

                        <RadioButton
                            android:id="@+id/thirdLight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/thirdLight"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/caffeine"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:ems="10"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/some_explanation_about_the_input"
                            android:inputType="textPersonName"
                            android:text="@string/caffeineTitle"
                            tools:layout_editor_absoluteX="1dp"
                            tools:layout_editor_absoluteY="153dp" />

                        <RadioButton
                            android:id="@+id/firstCaffeine"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/firstCaffeine"
                            android:textSize="12sp" />

                        <RadioButton
                            android:id="@+id/secondCaffeine"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/secondCaffeine"
                            android:textSize="12sp" />

                        <RadioButton
                            android:id="@+id/thirdCaffeine"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/thirdCaffeine"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/schedule"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:ems="10"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/some_explanation_about_the_input"
                            android:inputType="textPersonName"
                            android:text="@string/scheduleTitle"
                            tools:layout_editor_absoluteX="1dp"
                            tools:layout_editor_absoluteY="297dp" />

                        <RadioButton
                            android:id="@+id/firstSchedule"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/firstSchedule"
                            android:textSize="12sp" />

                        <RadioButton
                            android:id="@+id/secondSchedule"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/secondSchedule"
                            android:textSize="12sp" />

                        <RadioButton
                            android:id="@+id/thirdSchdule"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/thirdSchedule"
                            android:textSize="12sp" />

                        <RadioButton
                            android:id="@+id/fourthSchedule"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/fourthSchedule"
                            android:textSize="12sp" />
                    </RadioGroup>

                    <Button
                        android:id="@+id/submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="120dp"
                        android:layout_marginStart="120dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/submitUpdate"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/experimentsGroup" />

                </android.support.constraint.ConstraintLayout>
            </FrameLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>